# urnik

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json  terminal.db
src-tauri/migrations/2025-06-12-125310_create_cards/: down.sql  up.sql
src-tauri/migrations/2025-09-26-000000_create_punches/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs  models.rs  schema.rs
src-tauri/src/reader/: mod.rs  pn532.rs  rdm6300.rs  reader.rs
src/components/: Button.vue  CurrentTimeBlock.vue
src/localization/: en.json  sl.json
src/pages/: Admin.vue  Main.vue  Overview.vue
